tests/NormalTests/paczka1/fuzzy1/97371562.err
Error in line 1: qZYlZXIuZ S527 26,5
Error in line 13: aFM69VVvBdr S154 14,7
Error in line 18: RJd2z8Z A751 24,3
